# polyglot-alpha-beta-arena

./: .gitignore  AI_MECHANICS.md  LICENSE  README.md  run_ai_mechanics.sh
.github/workflows/: ai-mechanics-ci.yml  ci.yml
c/: main.c
cpp/: main.cpp
csharp/: Program.cs
deepgrid-java/: README.md  build.sh
deepgrid-java/src/main/java/ai/mechanics/: DqnAgent.java  GridWorld.java  Main.java  NeuralNetwork.java  ReplayBuffer.java
deepgrid-java/src/test/java/ai/mechanics/: TestRunner.java
docs/: SCREENSHOT_AND_OUTPUT_TODO.md
java/: Main.java
javascript/: main.js
neuroforge-cpp/: CMakeLists.txt  README.md
neuroforge-cpp/include/neuroforge/: nn.hpp  value.hpp
neuroforge-cpp/src/: main.cpp
neuroforge-cpp/tests/: test_autograd.cpp
php/: main.php
python/: main.py
scripts/: check_outputs.py
swift/: main.swift
